change parent to table element

--- a/andrew-bourgeois.html
+++ b/andrew-bourgeois.html
@@ -1,4 +1,4 @@
-<div
+<table
   style="
     width: 500px;
     height: auto;
@@ -76,4 +76,4 @@
       </td>
     </tr>
   </table>
-</div>
+</table>
