--- a/andrew-bourgeois.html
+++ b/andrew-bourgeois.html
@@ -1,79 +1,89 @@
 <table
   style="
     width: 500px;
-    height: auto;
     padding: 20px;
     background-color: white;
     border: 2px solid #e9e9e9;
     border-radius: 12px;
+    text-align: center;
   "
 >
-  <table
-    style="
-      width: 100%;
-      margin-bottom: 25px;
-      padding-bottom: 20px;
-      border-bottom: 1px solid #e9e9e9;
-      text-align: center;
-    "
-  >
-    <!-- main logos -->
-    <tr>
-      <td style="border-right: 1px solid #e9e9e9">
-        <!-- AMMC logo -->
-        <img
-          src="https://ammc.vercel.app/logos/AMMC-logo.svg"
-          alt="American Made Media Company logo"
-          style="width: 125px"
-        />
-      </td>
-      <td style="width: 300px">
-        <!-- Launchpad logo -->
-        <a href="https://launchpad-strategies.com">
-          <img
-            src="https://ammc.vercel.app/logos/launchpad-strategies-logo-email.svg"
-            alt="Launchpad Strategies logo"
-            style="width: 250px"
-          />
-        </a>
-      </td>
-    </tr>
-  </table>
-  <table style="width: 100%; text-align: center">
-    <!-- secondary logos -->
-    <tr>
-      <td>
-        <!-- NPA Strategies logo -->
-        <img
-          src="https://ammc.vercel.app/logos/npa-strategies-logo-gray.svg"
-          alt="NPA Strategies logo"
-          style="width: 65px"
-        />
-      </td>
-      <td>
-        <!-- AMMC Consultants logo -->
-        <img
-          src="https://ammc.vercel.app/logos/ammc-consultants-logo-gray.svg"
-          alt="AMMC Consultants logo"
-          style="width: 65px"
-        />
-      </td>
-      <td>
-        <!-- NPA Polling logo -->
-        <img
-          src="https://ammc.vercel.app/logos/npa-polling-logo-gray.svg"
-          alt="NPA Polling logo"
-          style="width: 65px"
-        />
-      </td>
-      <td style="width: 175px">
-        <!-- 17th Street Media logo -->
-        <img
-          src="https://ammc.vercel.app/logos/17th-street-logo-gray.svg"
-          alt="17th Street Media logo"
-          style="width: 135px"
-        />
-      </td>
-    </tr>
-  </table>
+  <tr>
+    <td>
+      <table
+        style="
+          width: 100%;
+          margin-bottom: 25px;
+          padding-bottom: 20px;
+          border-bottom: 1px solid #e9e9e9;
+          text-align: center;
+        "
+      >
+        <!-- main logos -->
+        <tr>
+          <td style="padding-right: 20px; border-right: 1px solid #e9e9e9">
+            <!-- AMMC logo -->
+            <img
+              src="https://ammc.vercel.app/logos/AMMC-logo.svg"
+              alt="American Made Media Company logo"
+              style="width: 125px"
+            />
+          </td>
+          <td style="width: 275px; padding-left: 10px;">
+            <!-- Launchpad logo -->
+            <a href="https://launchpad-strategies.com">
+              <img
+                src="https://ammc.vercel.app/logos/launchpad-strategies-logo-email.svg"
+                alt="Launchpad Strategies logo"
+                style="width: 250px"
+              />
+            </a>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <table style="width: 100%; text-align: center">
+        <!-- secondary logos -->
+        <tr>
+          <td>
+            <!-- NPA Strategies logo -->
+            <a href="https://www.natpublicaffairs.com/">
+              <img
+                src="https://ammc.vercel.app/logos/npa-strategies-logo-gray.svg"
+                alt="NPA Strategies logo"
+                style="width: 65px"
+              />
+            </a>
+          </td>
+          <td>
+            <!-- AMMC Consultants logo -->
+            <img
+              src="https://ammc.vercel.app/logos/ammc-consultants-logo-gray.svg"
+              alt="AMMC Consultants logo"
+              style="width: 65px"
+            />
+          </td>
+          <td>
+            <!-- NPA Polling logo -->
+            <img
+              src="https://ammc.vercel.app/logos/npa-polling-logo-gray.svg"
+              alt="NPA Polling logo"
+              style="width: 65px"
+            />
+          </td>
+          <td style="width: 175px">
+            <!-- 17th Street Media logo -->
+            <img
+              src="https://ammc.vercel.app/logos/17th-street-logo-gray.svg"
+              alt="17th Street Media logo"
+              style="width: 135px"
+            />
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
 </table>
