add Outlook specific tags for bg color

--- a/andrew-bourgeois.html
+++ b/andrew-bourgeois.html
@@ -1,3 +1,8 @@
+<!--[if mso]>
+<v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="width:100%;height:auto;">
+  <v:fill type="tile" color="#f0f0f0" />
+  <v:textbox inset="0,0,0,0">
+<![endif]-->
 <table
   style="
     width: 500px;
@@ -87,3 +92,7 @@
     </td>
   </tr>
 </table>
+<!--[if mso]>
+  </v:textbox>
+</v:rect>
+<![endif]-->
