add height auto

--- a/andrew-bourgeois.html
+++ b/andrew-bourgeois.html
@@ -31,7 +31,7 @@
             <img
               src="https://ammc.vercel.app/logos/AMMC-logo.svg"
               alt="American Made Media Company logo"
-              style="width: 125px"
+              style="width: 125px; height: auto;"
             />
           </td>
           <td style="width: 275px; padding-left: 10px;">
@@ -40,7 +40,7 @@
               <img
                 src="https://ammc.vercel.app/logos/launchpad-strategies-logo-email.svg"
                 alt="Launchpad Strategies logo"
-                style="width: 250px"
+                style="width: 250px; height: auto;"
               />
             </a>
           </td>
@@ -59,7 +59,7 @@
               <img
                 src="https://ammc.vercel.app/logos/npa-strategies-logo-gray.svg"
                 alt="NPA Strategies logo"
-                style="width: 65px"
+                style="width: 65px; height: auto;"
               />
             </a>
           </td>
@@ -68,7 +68,7 @@
             <img
               src="https://ammc.vercel.app/logos/ammc-consultants-logo-gray.svg"
               alt="AMMC Consultants logo"
-              style="width: 65px"
+              style="width: 65px; height: auto;"
             />
           </td>
           <td>
@@ -76,15 +76,15 @@
             <img
               src="https://ammc.vercel.app/logos/npa-polling-logo-gray.svg"
               alt="NPA Polling logo"
-              style="width: 65px"
+              style="width: 65px; height: auto;"
             />
           </td>
-          <td style="width: 175px">
+          <td style="width: 175px; height: auto;">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-street-logo-gray.svg"
               alt="17th Street Media logo"
-              style="width: 135px"
+              style="width: 135px; height: auto;"
             />
           </td>
         </tr>
