remove logo from alt text

--- a/andrew-bourgeois.html
+++ b/andrew-bourgeois.html
@@ -30,17 +30,17 @@
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/AMMC-logo.svg"
-              alt="American Made Media Company logo"
-              style="width: 125px; height: auto;"
+              alt="American Made Media Company"
+              style="width: 125px; height: auto"
             />
           </td>
-          <td style="width: 275px; padding-left: 10px;">
+          <td style="width: 275px; padding-left: 10px">
             <!-- Launchpad logo -->
             <a href="https://launchpad-strategies.com">
               <img
                 src="https://ammc.vercel.app/logos/launchpad-strategies-logo-email.svg"
-                alt="Launchpad Strategies logo"
-                style="width: 250px; height: auto;"
+                alt="Launchpad Strategies"
+                style="width: 250px; height: auto"
               />
             </a>
           </td>
@@ -58,8 +58,8 @@
             <a href="https://www.natpublicaffairs.com/">
               <img
                 src="https://ammc.vercel.app/logos/npa-strategies-logo-gray.svg"
-                alt="NPA Strategies logo"
-                style="width: 65px; height: auto;"
+                alt="NPA Strategies"
+                style="width: 65px; height: auto"
               />
             </a>
           </td>
@@ -68,23 +68,23 @@
             <img
               src="https://ammc.vercel.app/logos/ammc-consultants-logo-gray.svg"
               alt="AMMC Consultants logo"
-              style="width: 65px; height: auto;"
+              style="width: 65px; height: auto"
             />
           </td>
           <td>
             <!-- NPA Polling logo -->
             <img
               src="https://ammc.vercel.app/logos/npa-polling-logo-gray.svg"
-              alt="NPA Polling logo"
-              style="width: 65px; height: auto;"
+              alt="NPA Polling"
+              style="width: 65px; height: auto"
             />
           </td>
-          <td style="width: 175px; height: auto;">
+          <td style="width: 175px; height: auto">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-street-logo-gray.svg"
-              alt="17th Street Media logo"
-              style="width: 135px; height: auto;"
+              alt="17th Street Media"
+              style="width: 135px; height: auto"
             />
           </td>
         </tr>
