--- a/andrew-bourgeois.html
+++ b/andrew-bourgeois.html
@@ -29,7 +29,7 @@
           <td style="padding-right: 20px; border-right: 1px solid #e9e9e9">
             <!-- AMMC logo -->
             <img
-              src="https://ammc.vercel.app/logos/AMMC-logo.svg?reset=true"
+              src="https://ammc.vercel.app/logos/AMMC-logo.svg?v=true"
               alt="American Made Media Company"
               style="width: 125px; height: auto"
             />
@@ -38,7 +38,7 @@
             <!-- Launchpad logo -->
             <a href="https://launchpad-strategies.com">
               <img
-                src="https://ammc.vercel.app/logos/launchpad-strategies-logo-email.svg?reset=true"
+                src="https://ammc.vercel.app/logos/launchpad-strategies-logo-email.svg?v=true"
                 alt="Launchpad Strategies"
                 style="width: 250px; height: auto"
               />
@@ -57,7 +57,7 @@
             <!-- NPA Strategies logo -->
             <a href="https://www.natpublicaffairs.com/">
               <img
-                src="https://ammc.vercel.app/logos/npa-strategies-logo-gray.svg?reset=true"
+                src="https://ammc.vercel.app/logos/npa-strategies-logo-gray.svg?v=true"
                 alt="NPA Strategies"
                 style="width: 65px; height: auto"
               />
@@ -66,7 +66,7 @@
           <td>
             <!-- AMMC Consultants logo -->
             <img
-              src="https://ammc.vercel.app/logos/ammc-consultants-logo-gray.svg?reset=true"
+              src="https://ammc.vercel.app/logos/ammc-consultants-logo-gray.svg?v=true"
               alt="AMMC Consultants logo"
               style="width: 65px; height: auto"
             />
@@ -74,7 +74,7 @@
           <td>
             <!-- NPA Polling logo -->
             <img
-              src="https://ammc.vercel.app/logos/npa-polling-logo-gray.svg?reset=true"
+              src="https://ammc.vercel.app/logos/npa-polling-logo-gray.svg?v=true"
               alt="NPA Polling"
               style="width: 65px; height: auto"
             />
@@ -82,7 +82,7 @@
           <td style="width: 175px; height: auto">
             <!-- 17th Street Media logo -->
             <img
-              src="https://ammc.vercel.app/logos/seventeenth-street-logo-gray.svg?reset=true"
+              src="https://ammc.vercel.app/logos/seventeenth-street-logo-alt.svg?v=true"
               alt="17th Street Media"
               style="width: 135px; height: auto"
             />
