--- a/ammc-lp-signature.html
+++ b/ammc-lp-signature.html
@@ -67,7 +67,7 @@
             <!-- AMMC Consultants logo -->
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-gray.png"
-              alt="AMMC Consultants logo"
+              alt="AMMC Consultants"
               style="width: 65px; height: auto"
             />
           </td>
