update alt text

--- a/ammc-npa-strat-signature.html
+++ b/ammc-npa-strat-signature.html
@@ -39,7 +39,7 @@
             <a href="https://www.natpublicaffairs.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo.png"
-                alt="American Made Media Consultants"
+                alt="National Public Affairs Strategies"
                 style="width: 125px; height: auto"
               />
             </a>
@@ -47,6 +47,7 @@
         </tr>
       </table>
     </td>
+
   </tr>
   <tr>
     <td>
@@ -57,7 +58,7 @@
             <!-- AMMC Consulting logo -->
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-gray.png"
-              alt="NPA Strategies"
+              alt="American Made Media Consulting"
               style="width: 55px; height: auto"
             />
           </td>
@@ -66,7 +67,7 @@
             <a href="https://launchpad-strategies.com">
               <img
                 src="https://ammc.vercel.app/logos/lp-logo-gray.png"
-                alt="AMMC Consultants"
+                alt="Launchpad Strategies"
                 style="width: 135px; height: auto"
               />
             </a>
