--- a/ammc-npa-polling-signature.html
+++ b/ammc-npa-polling-signature.html
@@ -6,6 +6,7 @@
 <table
   style="
     width: 500px;
+    margin: 25px 10px;
     padding: 20px;
     background-color: white;
     border: 2px solid #e9e9e9;
