--- a/ammc-npa-strat-signature.html
+++ b/ammc-npa-strat-signature.html
@@ -8,7 +8,7 @@
     width: 500px;
     padding: 20px;
     background-color: white;
-    border: 2px solid #e9e9e9;
+    border: 2px solid #CEDAE3;
     border-radius: 12px;
     text-align: center;
   "
@@ -20,13 +20,13 @@
           width: 100%;
           margin-bottom: 25px;
           padding-bottom: 20px;
-          border-bottom: 1px solid #e9e9e9;
+          border-bottom: 1px solid #CEDAE3;
           text-align: center;
         "
       >
         <!-- main logos -->
         <tr>
-          <td style="padding-right: 20px; border-right: 1px solid #e9e9e9">
+          <td style="padding-right: 20px; border-right: 1px solid #CEDAE3">
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
@@ -57,7 +57,7 @@
           <td>
             <!-- AMMC Consulting logo -->
             <img
-              src="https://ammc.vercel.app/logos/ammcc-logo-gray.png"
+              src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
               alt="American Made Media Consulting"
               style="width: 55px; height: auto"
             />
@@ -66,7 +66,7 @@
             <!-- Launchpad Strategies logo -->
             <a href="https://launchpad-strategies.com">
               <img
-                src="https://ammc.vercel.app/logos/lp-logo-gray.png"
+                src="https://ammc.vercel.app/logos/lp-logo-blue.png"
                 alt="Launchpad Strategies"
                 style="width: 135px; height: auto"
               />
@@ -75,7 +75,7 @@
           <td>
             <!-- NPA Polling logo -->
             <img
-              src="https://ammc.vercel.app/logos/npap-logo-gray.png"
+              src="https://ammc.vercel.app/logos/npap-logo-blue.png"
               alt="NPA Polling"
               style="width: 55px; height: auto"
             />
@@ -83,7 +83,7 @@
           <td style="width: 165px; height: auto">
             <!-- 17th Street Media logo -->
             <img
-              src="https://ammc.vercel.app/logos/17th-st-logo-gray.png"
+              src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
               alt="17th Street Media"
               style="width: 115px; height: auto"
             />
