--- a/ammc-17th-signature.html
+++ b/ammc-17th-signature.html
@@ -8,7 +8,7 @@
     width: 500px;
     padding: 20px;
     background-color: white;
-    border: 2px solid #e9e9e9;
+    border: 2px solid #CEDAE3;
     border-radius: 12px;
     text-align: center;
   "
@@ -20,13 +20,13 @@
           width: 100%;
           margin-bottom: 25px;
           padding-bottom: 20px;
-          border-bottom: 1px solid #e9e9e9;
+          border-bottom: 1px solid #CEDAE3;
           text-align: center;
         "
       >
         <!-- main logos -->
         <tr>
-          <td style="padding-right: 20px; border-right: 1px solid #e9e9e9">
+          <td style="padding-right: 20px; border-right: 1px solid #CEDAE3">
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
@@ -55,7 +55,7 @@
             <!-- NPA Strategies logo -->
             <a href="https://www.natpublicaffairs.com/">
               <img
-                src="https://ammc.vercel.app/logos/npas-logo-gray.png"
+                src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
                 style="width: 65px; height: auto"
               />
@@ -64,7 +64,7 @@
           <td>
             <!-- AMMC Consultants logo -->
             <img
-              src="https://ammc.vercel.app/logos/ammcc-logo-gray.png"
+              src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
               alt="AMMC Consultants"
               style="width: 65px; height: auto"
             />
@@ -72,7 +72,7 @@
           <td>
             <!-- NPA Polling logo -->
             <img
-              src="https://ammc.vercel.app/logos/npap-logo-gray.png"
+              src="https://ammc.vercel.app/logos/npap-logo-blue.png"
               alt="NPA Polling"
               style="width: 65px; height: auto"
             />
@@ -81,7 +81,7 @@
             <!-- Launchpad Strategies logo -->
             <a href="https://launchpad-strategies.com">
               <img
-                src="https://ammc.vercel.app/logos/lp-logo-gray.png"
+                src="https://ammc.vercel.app/logos/lp-logo-blue.png"
                 alt="Launchpad Strategies"
                 style="width: 135px; height: auto"
               />
