--- a/ammc-lp-signature.html
+++ b/ammc-lp-signature.html
@@ -26,7 +26,7 @@
       >
         <!-- main logos -->
         <tr>
-          <td style="padding-right: 20px; border-right: 1px solid #e9e9e9">
+          <td style="padding: 0 20px; border-right: 1px solid #e9e9e9">
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
@@ -34,7 +34,7 @@
               style="width: 125px; height: auto"
             />
           </td>
-          <td style="width: 275px; padding-left: 10px">
+          <td style="width: 275px; padding: 0 10px">
             <!-- Launchpad logo -->
             <a href="https://launchpad-strategies.com">
               <img
@@ -50,7 +50,7 @@
   </tr>
   <tr>
     <td>
-      <table style="width: 100%; text-align: center">
+      <table style="width: 100%; text-align: center;">
         <!-- secondary logos -->
         <tr>
           <td>
@@ -59,7 +59,7 @@
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-gray.png"
                 alt="NPA Strategies"
-                style="width: 65px; height: auto"
+                style="width: 65px; height: auto;"
               />
             </a>
           </td>
@@ -68,7 +68,7 @@
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-gray.png"
               alt="AMMC Consultants"
-              style="width: 65px; height: auto"
+              style="width: 65px; height: auto; padding: 0 10px;"
             />
           </td>
           <td>
@@ -76,15 +76,15 @@
             <img
               src="https://ammc.vercel.app/logos/npap-logo-gray.png"
               alt="NPA Polling"
-              style="width: 65px; height: auto"
+              style="width: 65px; height: auto; padding: 0 10px;"
             />
           </td>
-          <td style="width: 175px; height: auto">
+          <td style="width: 175px; height: auto;">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-st-logo-gray.png"
               alt="17th Street Media"
-              style="width: 135px; height: auto"
+              style="width: 135px; height: auto; padding: 0 10px;"
             />
           </td>
         </tr>
