--- a/ammc-17th-signature.html
+++ b/ammc-17th-signature.html
@@ -8,7 +8,7 @@
     width: 500px;
     padding: 20px;
     background-color: white;
-    border: 2px solid #CEDAE3;
+    border: 2px solid #cedae3;
     border-radius: 12px;
     text-align: center;
   "
@@ -20,13 +20,13 @@
           width: 100%;
           margin-bottom: 25px;
           padding-bottom: 20px;
-          border-bottom: 1px solid #CEDAE3;
+          border-bottom: 1px solid #cedae3;
           text-align: center;
         "
       >
         <!-- main logos -->
         <tr>
-          <td style="padding-right: 20px; border-right: 1px solid #CEDAE3">
+          <td style="padding: 0 20px; border-right: 1px solid #cedae3">
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
@@ -34,7 +34,7 @@
               style="width: 125px; height: auto"
             />
           </td>
-          <td style="width: 275px; padding-left: 10px">
+          <td style="width: 275px; padding: 0 10px">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-st-logo.png"
@@ -57,7 +57,7 @@
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
-                style="width: 65px; height: auto"
+                style="width: 65px; height: auto; padding: 0 10px"
               />
             </a>
           </td>
@@ -66,7 +66,7 @@
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
               alt="AMMC Consultants"
-              style="width: 65px; height: auto"
+              style="width: 65px; height: auto; padding: 0 10px"
             />
           </td>
           <td>
@@ -74,7 +74,7 @@
             <img
               src="https://ammc.vercel.app/logos/npap-logo-blue.png"
               alt="NPA Polling"
-              style="width: 65px; height: auto"
+              style="width: 65px; height: auto; padding: 0 10px"
             />
           </td>
           <td style="width: 175px; height: auto">
@@ -83,7 +83,7 @@
               <img
                 src="https://ammc.vercel.app/logos/lp-logo-blue.png"
                 alt="Launchpad Strategies"
-                style="width: 135px; height: auto"
+                style="width: 135px; height: auto; padding: 0 10px"
               />
             </a>
           </td>
