--- a/ammc-ammcc-signature.html
+++ b/ammc-ammcc-signature.html
@@ -5,8 +5,8 @@
 <![endif]-->
 <table
   style="
-    width: 500px;
-    padding: 20px;
+    width: auto;
+    padding: 25px;
     background-color: white;
     border: 2px solid #CEDAE3;
     border-radius: 12px;
@@ -18,15 +18,14 @@
       <table
         style="
           width: 100%;
-          margin-bottom: 25px;
-          padding-bottom: 20px;
+          padding-bottom: 25px;
           border-bottom: 1px solid #CEDAE3;
           text-align: center;
         "
       >
         <!-- main logos -->
         <tr>
-          <td style="padding-right: 20px; border-right: 1px solid #CEDAE3">
+          <td style="width: 125px; padding: 0 50px 0 25px; border-right: 1px solid #CEDAE3">
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
@@ -34,7 +33,7 @@
               style="width: 125px; height: auto"
             />
           </td>
-          <td style="padding-left: 10px">
+          <td style="width: 125px; padding: 0 25px 0 50px">
             <!-- AMMC Consultants logo -->
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo.png"
@@ -48,43 +47,43 @@
   </tr>
   <tr>
     <td>
-      <table style="width: 100%; text-align: center">
+      <table style="width: 100%; padding-top: 25px; text-align: center;">
         <!-- secondary logos -->
         <tr>
-          <td>
+          <td style="width: 55px; padding-right: 30px;">
             <!-- NPA Strategies logo -->
             <a href="https://www.natpublicaffairs.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
-                style="width: 55px; height: auto"
+                style="width: 55px; height: auto;"
               />
             </a>
           </td>
-          <td style="width: 180px; height: auto">
+          <td style="width: 135px; height: auto; padding-right: 30px;">
             <!-- Launchpad Strategies logo -->
             <a href="https://launchpad-strategies.com">
               <img
               src="https://ammc.vercel.app/logos/lp-logo-blue.png"
               alt="AMMC Consultants"
-              style="width: 135px; height: auto"
+              style="width: 135px; height: auto;"
             />
             </a>
           </td>
-          <td>
+          <td style="width: 55px; padding-right: 30px;">
             <!-- NPA Polling logo -->
             <img
               src="https://ammc.vercel.app/logos/npap-logo-blue.png"
               alt="NPA Polling"
-              style="width: 55px; height: auto"
+              style="width: 55px; height: auto;"
             />
           </td>
-          <td style="width: 165px; height: auto">
+          <td style="width: 115px; height: auto;">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
               alt="17th Street Media"
-              style="width: 115px; height: auto"
+              style="width: 115px; height: auto;"
             />
           </td>
         </tr>
