--- a/ammc-ammcc-signature.html
+++ b/ammc-ammcc-signature.html
@@ -6,6 +6,7 @@
 <table
   style="
     width: auto;
+    margin: 25px 0;
     padding: 25px;
     background-color: white;
     border: 2px solid #CEDAE3;
