update with absolute measurements

--- a/ammc-npa-polling-signature.html
+++ b/ammc-npa-polling-signature.html
@@ -5,9 +5,9 @@
 <![endif]-->
 <table
   style="
-    width: 500px;
-    margin: 25px 10px;
-    padding: 20px;
+    width: auto;
+    margin: 25px 0;
+    padding: 25px;
     background-color: white;
     border: 2px solid #CEDAE3;
     border-radius: 12px;
@@ -19,7 +19,6 @@
       <table
         style="
           width: 100%;
-          margin-bottom: 25px;
           padding-bottom: 20px;
           border-bottom: 1px solid #CEDAE3;
           text-align: center;
@@ -27,21 +26,21 @@
       >
         <!-- main logos -->
         <tr>
-          <td style="padding-right: 20px; border-right: 1px solid #CEDAE3">
+          <td style="width: 136px; padding: 0 56px 0 32px; border-right: 1px solid #CEDAE3">
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
               alt="American Made Media Company"
-              style="width: 125px; height: auto"
+              style="width: 136px; height: auto"
             />
           </td>
-          <td style="padding-left: 10px">
+          <td style="width: 136px; padding: 0 32px 0 57px">
             <!-- NPA Polling logo -->
             <a href="https://www.natpublicaffairs.com/">
               <img
                 src="https://ammc.vercel.app/logos/npap-logo.png"
                 alt="National Public Affairs Polling"
-                style="width: 125px; height: auto"
+                style="width: 136px; height: auto"
               />
             </a>
           </td>
@@ -51,10 +50,10 @@
   </tr>
   <tr>
     <td>
-      <table style="width: 100%; text-align: center">
+      <table style="width: 100%; padding-top: 25px; text-align: center;">
         <!-- secondary logos -->
         <tr>
-          <td>
+          <td style="width: 55px; padding-right: 30px;">
             <!-- AMMC Consulting logo -->
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
@@ -62,7 +61,7 @@
               style="width: 55px; height: auto"
             />
           </td>
-          <td style="width: 180px; height: auto">
+          <td style="width: 135px; height: auto; padding-right: 30px;">
             <!-- Launchpad Strategies logo -->
             <a href="https://launchpad-strategies.com">
               <img
@@ -72,7 +71,7 @@
               />
             </a>
           </td>
-          <td>
+          <td style="width: 55px; padding-right: 30px;">
             <!-- NPA Strategies logo -->
             <img
               src="https://ammc.vercel.app/logos/npas-logo-blue.png"
@@ -80,7 +79,7 @@
               style="width: 55px; height: auto"
             />
           </td>
-          <td style="width: 165px; height: auto">
+          <td style="width: 115px; height: auto">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
