--- a/ammc-ammcc-signature.html
+++ b/ammc-ammcc-signature.html
@@ -9,7 +9,7 @@
     margin: 25px 0;
     padding: 25px;
     background-color: white;
-    border: 2px solid #CEDAE3;
+    border: 2px solid #cedae3;
     border-radius: 12px;
     text-align: center;
   "
@@ -20,13 +20,19 @@
         style="
           width: 100%;
           padding-bottom: 25px;
-          border-bottom: 1px solid #CEDAE3;
+          border-bottom: 1px solid #cedae3;
           text-align: center;
         "
       >
         <!-- main logos -->
         <tr>
-          <td style="width: 136px; padding: 0 56px 0 32px; border-right: 1px solid #CEDAE3">
+          <td
+            style="
+              width: 136px;
+              padding: 0 56px 0 32px;
+              border-right: 1px solid #cedae3;
+            "
+          >
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
@@ -48,43 +54,43 @@
   </tr>
   <tr>
     <td>
-      <table style="width: 100%; padding-top: 25px; text-align: center;">
+      <table style="width: 100%; padding-top: 25px; text-align: center">
         <!-- secondary logos -->
         <tr>
-          <td style="width: 55px; padding-right: 30px;">
+          <td style="width: 55px; padding-right: 30px">
             <!-- NPA Strategies logo -->
             <a href="https://www.natpublicaffairs.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
-                style="width: 55px; height: auto;"
+                style="width: 55px; height: auto"
               />
             </a>
           </td>
-          <td style="width: 135px; height: auto; padding-right: 30px;">
+          <td style="width: 135px; height: auto; padding-right: 30px">
             <!-- Launchpad Strategies logo -->
             <a href="https://launchpad-strategies.com">
               <img
-              src="https://ammc.vercel.app/logos/lp-logo-blue.png"
-              alt="AMMC Consultants"
-              style="width: 135px; height: auto;"
-            />
+                src="https://ammc.vercel.app/logos/lp-logo-blue.png"
+                alt="AMMC Consultants"
+                style="width: 135px; height: auto"
+              />
             </a>
           </td>
-          <td style="width: 55px; padding-right: 30px;">
+          <td style="width: 55px; padding-right: 30px">
             <!-- NPA Polling logo -->
             <img
               src="https://ammc.vercel.app/logos/npap-logo-blue.png"
               alt="NPA Polling"
-              style="width: 55px; height: auto;"
+              style="width: 55px; height: auto"
             />
           </td>
-          <td style="width: 115px; height: auto;">
+          <td style="width: 115px; height: auto">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
               alt="17th Street Media"
-              style="width: 115px; height: auto;"
+              style="width: 115px; height: auto"
             />
           </td>
         </tr>
