convert to absolute units

--- a/ammc-lp-signature.html
+++ b/ammc-lp-signature.html
@@ -26,15 +26,15 @@
       >
         <!-- main logos -->
         <tr>
-          <td style="padding: 0 20px; border-right: 1px solid #e9e9e9">
+          <td style="padding: 0 28px 0 3px; border-right: 1px solid #e9e9e9">
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
               alt="American Made Media Company"
-              style="width: 125px; height: auto"
+              style="width: 136px; height: auto"
             />
           </td>
-          <td style="width: 275px; padding: 0 10px">
+          <td style="width: 250px; padding: 0 3px 0 29px">
             <!-- Launchpad logo -->
             <a href="https://launchpad-strategies.com">
               <img
@@ -53,38 +53,38 @@
       <table style="width: 100%; text-align: center">
         <!-- secondary logos -->
         <tr>
-          <td>
+          <td style="width: 60px; padding: 0 40px 0 15px">
             <!-- NPA Strategies logo -->
             <a href="https://www.natpublicaffairs.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-gray.png"
                 alt="NPA Strategies"
-                style="width: 65px; height: auto; padding: 0 10px"
+                style="width: 60px; height: auto"
               />
             </a>
           </td>
-          <td>
+          <td style="width: 60px; padding-right: 40px">
             <!-- AMMC Consultants logo -->
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-gray.png"
               alt="AMMC Consultants"
-              style="width: 65px; height: auto; padding: 0 10px"
+              style="width: 60px; height: auto"
             />
           </td>
-          <td>
+          <td style="width: 60px; padding-right: 40px">
             <!-- NPA Polling logo -->
             <img
               src="https://ammc.vercel.app/logos/npap-logo-gray.png"
               alt="NPA Polling"
-              style="width: 65px; height: auto; padding: 0 10px"
+              style="width: 60px; height: auto"
             />
           </td>
-          <td style="width: 175px; height: auto">
+          <td style="width: 120px; height: auto; padding-right: 15px">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-st-logo-gray.png"
               alt="17th Street Media"
-              style="width: 135px; height: auto; padding: 0 10px"
+              style="width: 120px; height: auto"
             />
           </td>
         </tr>
