--- a/ammc-npa-polling-signature.html
+++ b/ammc-npa-polling-signature.html
@@ -9,7 +9,7 @@
     margin: 25px 0;
     padding: 25px;
     background-color: white;
-    border: 2px solid #CEDAE3;
+    border: 2px solid #cedae3;
     border-radius: 12px;
     text-align: center;
   "
@@ -20,13 +20,19 @@
         style="
           width: 100%;
           padding-bottom: 20px;
-          border-bottom: 1px solid #CEDAE3;
+          border-bottom: 1px solid #cedae3;
           text-align: center;
         "
       >
         <!-- main logos -->
         <tr>
-          <td style="width: 136px; padding: 0 56px 0 32px; border-right: 1px solid #CEDAE3">
+          <td
+            style="
+              width: 136px;
+              padding: 0 56px 0 32px;
+              border-right: 1px solid #cedae3;
+            "
+          >
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
@@ -50,10 +56,10 @@
   </tr>
   <tr>
     <td>
-      <table style="width: 100%; padding-top: 25px; text-align: center;">
+      <table style="width: 100%; padding-top: 25px; text-align: center">
         <!-- secondary logos -->
         <tr>
-          <td style="width: 55px; padding-right: 30px;">
+          <td style="width: 55px; padding-right: 30px">
             <!-- AMMC Consulting logo -->
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
@@ -61,7 +67,7 @@
               style="width: 55px; height: auto"
             />
           </td>
-          <td style="width: 135px; height: auto; padding-right: 30px;">
+          <td style="width: 135px; height: auto; padding-right: 30px">
             <!-- Launchpad Strategies logo -->
             <a href="https://launchpad-strategies.com">
               <img
@@ -71,7 +77,7 @@
               />
             </a>
           </td>
-          <td style="width: 55px; padding-right: 30px;">
+          <td style="width: 55px; padding-right: 30px">
             <!-- NPA Strategies logo -->
             <img
               src="https://ammc.vercel.app/logos/npas-logo-blue.png"
