--- a/ammc-lp-signature.html
+++ b/ammc-lp-signature.html
@@ -6,7 +6,8 @@
 <table
   style="
     width: 500px;
-    padding: 20px;
+    margin: 25px 0;
+    padding: 25px;
     background-color: white;
     border: 2px solid #e9e9e9;
     border-radius: 12px;
