--- a/ammc-17th-signature.html
+++ b/ammc-17th-signature.html
@@ -6,7 +6,8 @@
 <table
   style="
     width: 500px;
-    padding: 20px;
+    margin: 25px 0;
+    padding: 25px;
     background-color: white;
     border: 2px solid #cedae3;
     border-radius: 12px;
@@ -18,15 +19,14 @@
       <table
         style="
           width: 100%;
-          margin-bottom: 25px;
-          padding-bottom: 20px;
+          padding-bottom: 25px;
           border-bottom: 1px solid #cedae3;
           text-align: center;
         "
       >
         <!-- main logos -->
         <tr>
-          <td style="padding: 0 20px; border-right: 1px solid #cedae3">
+          <td style="padding: 0 28px 0 3px; border-right: 1px solid #cedae3">
             <!-- AMMC logo -->
             <img
               src="https://ammc.vercel.app/logos/ammc-logo.png"
@@ -34,7 +34,7 @@
               style="width: 125px; height: auto"
             />
           </td>
-          <td style="width: 275px; padding: 0 10px">
+          <td style="width: 250px; padding: 0 3px 0 29px">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-st-logo.png"
@@ -48,42 +48,42 @@
   </tr>
   <tr>
     <td>
-      <table style="width: 100%; text-align: center">
+      <table style="width: 100%; padding-top: 25px; text-align: center">
         <!-- secondary logos -->
         <tr>
-          <td>
+          <td style="width: 60px; padding: 0 40px 0 15px">
             <!-- NPA Strategies logo -->
             <a href="https://www.natpublicaffairs.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
-                style="width: 65px; height: auto; padding: 0 10px"
+                style="width: 60px; height: auto"
               />
             </a>
           </td>
-          <td>
+          <td style="width: 60px; padding-right: 40px">
             <!-- AMMC Consultants logo -->
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
               alt="AMMC Consultants"
-              style="width: 65px; height: auto; padding: 0 10px"
+              style="width: 60px; height: auto"
             />
           </td>
-          <td>
+          <td style="width: 60px; padding-right: 40px">
             <!-- NPA Polling logo -->
             <img
               src="https://ammc.vercel.app/logos/npap-logo-blue.png"
               alt="NPA Polling"
-              style="width: 65px; height: auto; padding: 0 10px"
+              style="width: 60px; height: auto"
             />
           </td>
-          <td style="width: 175px; height: auto">
+          <td style="width: 120px; height: auto; padding-right: 15px">
             <!-- Launchpad Strategies logo -->
             <a href="https://launchpad-strategies.com">
               <img
                 src="https://ammc.vercel.app/logos/lp-logo-blue.png"
                 alt="Launchpad Strategies"
-                style="width: 135px; height: auto; padding: 0 10px"
+                style="width: 120px; height: auto"
               />
             </a>
           </td>
