--- a/ammc-lp-signature.html
+++ b/ammc-lp-signature.html
@@ -19,8 +19,7 @@
       <table
         style="
           width: 100%;
-          margin-bottom: 25px;
-          padding-bottom: 20px;
+          padding-bottom: 25px;
           border-bottom: 1px solid #e9e9e9;
           text-align: center;
         "
@@ -51,7 +50,7 @@
   </tr>
   <tr>
     <td>
-      <table style="width: 100%; text-align: center">
+      <table style="width: 100%; padding-top: 25px; text-align: center">
         <!-- secondary logos -->
         <tr>
           <td style="width: 60px; padding: 0 40px 0 15px">
