--- a/ammc-npa-strat-signature.html
+++ b/ammc-npa-strat-signature.html
@@ -59,7 +59,7 @@
       <table style="width: 100%; padding-top: 25px; text-align: center">
         <!-- secondary logos -->
         <tr>
-          <td style="width: 55px; padding-right: 30px;">
+          <td style="width: 55px; padding-right: 30px">
             <!-- AMMC Consulting logo -->
             <img
               src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
@@ -67,7 +67,7 @@
               style="width: 55px; height: auto"
             />
           </td>
-          <td style="width: 135px; height: auto; padding-right: 30px;">
+          <td style="width: 135px; height: auto; padding-right: 30px">
             <!-- Launchpad Strategies logo -->
             <a href="https://launchpad-strategies.com">
               <img
@@ -77,7 +77,7 @@
               />
             </a>
           </td>
-          <td style="width: 55px; padding-right: 30px;">
+          <td style="width: 55px; padding-right: 30px">
             <!-- NPA Polling logo -->
             <img
               src="https://ammc.vercel.app/logos/npap-logo-blue.png"
@@ -85,7 +85,7 @@
               style="width: 55px; height: auto"
             />
           </td>
-          <td style="width: 115px; height: auto;">
+          <td style="width: 115px; height: auto">
             <!-- 17th Street Media logo -->
             <img
               src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
