--- a/ammc-signature.html
+++ b/ammc-signature.html
@@ -26,18 +26,15 @@
       >
         <!-- main logos -->
         <tr>
-          <td
-            style="
-              width: 181px;
-              padding: 0 152px;
-            "
-          >
+          <td style="width: 181px; padding: 0 152px">
             <!-- AMMC logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammc-logo.png"
-              alt="American Made Media Company"
-              style="width: 181px; height: auto"
-            />
+            <a href="https://americanmadeco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammc-logo.png"
+                alt="American Made Media Company"
+                style="width: 181px; height: auto"
+              />
+            </a>
           </td>
         </tr>
       </table>
@@ -50,7 +47,7 @@
         <tr>
           <td style="width: 45px; padding-right: 25px">
             <!-- NPA Strategies logo -->
-            <a href="https://www.natpublicaffairs.com/">
+            <a href="http://npastrategies.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
@@ -70,27 +67,33 @@
           </td>
           <td style="width: 45px; height: auto; padding-right: 25px">
             <!-- AMM Consultants logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
-              alt="AMMC Consultants"
-              style="width: 45px; height: auto"
-            />
+            <a href="http://ammediaco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
+                alt="AMMC Consultants"
+                style="width: 45px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 45px; padding-right: 25px">
             <!-- NPA Polling logo -->
-            <img
-              src="https://ammc.vercel.app/logos/npap-logo-blue.png"
-              alt="NPA Polling"
-              style="width: 45px; height: auto"
-            />
+            <a href="http://natpublicaffairs.com/">
+              <img
+                src="https://ammc.vercel.app/logos/npap-logo-blue.png"
+                alt="NPA Polling"
+                style="width: 45px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 100px; height: auto">
             <!-- 17th Street Media logo -->
-            <img
-              src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
-              alt="17th Street Media"
-              style="width: 100px; height: auto"
-            />
+            <a href="http://17thstreetmedia.com/">
+              <img
+                src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
+                alt="17th Street Media"
+                style="width: 100px; height: auto"
+              />
+            </a>
           </td>
         </tr>
       </table>
