--- a/ammc-npa-strat-signature.html
+++ b/ammc-npa-strat-signature.html
@@ -34,11 +34,13 @@
             "
           >
             <!-- AMMC logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammc-logo.png"
-              alt="American Made Media Company"
-              style="width: 136px; height: auto"
-            />
+            <a href="http://americanmadeco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammc-logo.png"
+                alt="American Made Media Company"
+                style="width: 136px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 136px; padding: 0 32px 0 57px">
             <!-- NPA Strategies logo -->
@@ -61,11 +63,13 @@
         <tr>
           <td style="width: 55px; padding-right: 30px">
             <!-- AMMC Consulting logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
-              alt="American Made Media Consulting"
-              style="width: 55px; height: auto"
-            />
+            <a href="http://ammediaco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
+                alt="American Made Media Consulting"
+                style="width: 55px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 135px; height: auto; padding-right: 30px">
             <!-- Launchpad Strategies logo -->
@@ -79,19 +83,23 @@
           </td>
           <td style="width: 55px; padding-right: 30px">
             <!-- NPA Polling logo -->
-            <img
-              src="https://ammc.vercel.app/logos/npap-logo-blue.png"
-              alt="NPA Polling"
-              style="width: 55px; height: auto"
-            />
+            <a href="http://npastrategies.com/">
+              <img
+                src="https://ammc.vercel.app/logos/npap-logo-blue.png"
+                alt="NPA Polling"
+                style="width: 55px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 115px; height: auto">
             <!-- 17th Street Media logo -->
-            <img
-              src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
-              alt="17th Street Media"
-              style="width: 115px; height: auto"
-            />
+            <a href="http://17thstreetmedia.com/">
+              <img
+                src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
+                alt="17th Street Media"
+                style="width: 115px; height: auto"
+              />
+            </a>
           </td>
         </tr>
       </table>
