--- a/ammc-lp-signature.html
+++ b/ammc-lp-signature.html
@@ -28,11 +28,13 @@
         <tr>
           <td style="padding: 0 28px 0 3px; border-right: 1px solid #e9e9e9">
             <!-- AMMC logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammc-logo.png"
-              alt="American Made Media Company"
-              style="width: 136px; height: auto"
-            />
+            <a href="http://americanmadeco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammc-logo.png"
+                alt="American Made Media Company"
+                style="width: 136px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 250px; padding: 0 3px 0 29px">
             <!-- Launchpad logo -->
@@ -65,27 +67,33 @@
           </td>
           <td style="width: 60px; padding-right: 40px">
             <!-- AMMC Consultants logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammcc-logo-gray.png"
-              alt="AMMC Consultants"
-              style="width: 60px; height: auto"
-            />
+            <a href="http://ammediaco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammcc-logo-gray.png"
+                alt="AMMC Consultants"
+                style="width: 60px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 60px; padding-right: 40px">
             <!-- NPA Polling logo -->
-            <img
-              src="https://ammc.vercel.app/logos/npap-logo-gray.png"
-              alt="NPA Polling"
-              style="width: 60px; height: auto"
-            />
+            <a href="http://natpublicaffairs.com/">
+              <img
+                src="https://ammc.vercel.app/logos/npap-logo-gray.png"
+                alt="NPA Polling"
+                style="width: 60px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 120px; height: auto; padding-right: 15px">
             <!-- 17th Street Media logo -->
-            <img
-              src="https://ammc.vercel.app/logos/17th-st-logo-gray.png"
-              alt="17th Street Media"
-              style="width: 120px; height: auto"
-            />
+            <a href="http://17thstreetmedia.com/">
+              <img
+                src="https://ammc.vercel.app/logos/17th-st-logo-gray.png"
+                alt="17th Street Media"
+                style="width: 120px; height: auto"
+              />
+            </a>
           </td>
         </tr>
       </table>
