--- a/ammc-ammcc-signature.html
+++ b/ammc-ammcc-signature.html
@@ -34,19 +34,23 @@
             "
           >
             <!-- AMMC logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammc-logo.png"
-              alt="American Made Media Company"
-              style="width: 136px; height: auto"
-            />
+            <a href="http://americanmadeco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammc-logo.png"
+                alt="American Made Media Company"
+                style="width: 136px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 136px; padding: 0 32px 0 57px">
             <!-- AMMC Consultants logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammcc-logo.png"
-              alt="American Made Media Consultants"
-              style="width: 136px; height: auto"
-            />
+            <a href="http://ammediaco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammcc-logo.png"
+                alt="American Made Media Consultants"
+                style="width: 136px; height: auto"
+              />
+            </a>
           </td>
         </tr>
       </table>
@@ -59,7 +63,7 @@
         <tr>
           <td style="width: 55px; padding-right: 30px">
             <!-- NPA Strategies logo -->
-            <a href="https://www.natpublicaffairs.com/">
+            <a href="http://npastrategies.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
@@ -79,19 +83,23 @@
           </td>
           <td style="width: 55px; padding-right: 30px">
             <!-- NPA Polling logo -->
-            <img
-              src="https://ammc.vercel.app/logos/npap-logo-blue.png"
-              alt="NPA Polling"
-              style="width: 55px; height: auto"
-            />
+            <a href="http://natpublicaffairs.com/">
+              <img
+                src="https://ammc.vercel.app/logos/npap-logo-blue.png"
+                alt="NPA Polling"
+                style="width: 55px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 115px; height: auto">
             <!-- 17th Street Media logo -->
-            <img
-              src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
-              alt="17th Street Media"
-              style="width: 115px; height: auto"
-            />
+            <a href="http://17thstreetmedia.com/">
+              <img
+                src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
+                alt="17th Street Media"
+                style="width: 115px; height: auto"
+              />
+            </a>
           </td>
         </tr>
       </table>
