--- a/ammc-17th-signature.html
+++ b/ammc-17th-signature.html
@@ -28,19 +28,23 @@
         <tr>
           <td style="padding: 0 28px 0 3px; border-right: 1px solid #cedae3">
             <!-- AMMC logo -->
-            <img
-              src="https://ammc.vercel.app/logos/ammc-logo.png"
-              alt="American Made Media Company"
-              style="width: 125px; height: auto"
-            />
+            <a href="http://americanmadeco.com/">
+              <img
+                src="https://ammc.vercel.app/logos/ammc-logo.png"
+                alt="American Made Media Company"
+                style="width: 125px; height: auto"
+              />
+            </a>
           </td>
           <td style="width: 250px; padding: 0 3px 0 29px">
             <!-- 17th Street Media logo -->
-            <img
+            <a href="http://17thstreetmedia.com/">
+              <img
               src="https://ammc.vercel.app/logos/17th-st-logo.png"
               alt="17th Street Media"
               style="width: 250px; height: auto"
             />
+            </a>
           </td>
         </tr>
       </table>
@@ -53,7 +57,7 @@
         <tr>
           <td style="width: 60px; padding: 0 40px 0 15px">
             <!-- NPA Strategies logo -->
-            <a href="https://www.natpublicaffairs.com/">
+            <a href="http://npastrategies.com/">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
@@ -63,19 +67,23 @@
           </td>
           <td style="width: 60px; padding-right: 40px">
             <!-- AMMC Consultants logo -->
-            <img
+            <a href="http://ammediaco.com/">
+              <img
               src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
               alt="AMMC Consultants"
               style="width: 60px; height: auto"
             />
+            </a>
           </td>
           <td style="width: 60px; padding-right: 40px">
             <!-- NPA Polling logo -->
-            <img
+            <a href="http://natpublicaffairs.com/">
+              <img
               src="https://ammc.vercel.app/logos/npap-logo-blue.png"
               alt="NPA Polling"
               style="width: 60px; height: auto"
             />
+            </a>
           </td>
           <td style="width: 120px; height: auto; padding-right: 15px">
             <!-- Launchpad Strategies logo -->
