--- a/ammc-signature.html
+++ b/ammc-signature.html
@@ -28,7 +28,7 @@
         <tr>
           <td style="width: 181px; padding: 0 152px">
             <!-- AMMC logo -->
-            <a href="https://americanmadeco.com/">
+            <a href="https://americanmadeco.com">
               <img
                 src="https://ammc.vercel.app/logos/ammc-logo.png"
                 alt="American Made Media Company"
@@ -47,7 +47,7 @@
         <tr>
           <td style="width: 45px; padding-right: 25px">
             <!-- NPA Strategies logo -->
-            <a href="http://npastrategies.com/">
+            <a href="http://npastrategies.com">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
@@ -67,7 +67,7 @@
           </td>
           <td style="width: 45px; height: auto; padding-right: 25px">
             <!-- AMM Consultants logo -->
-            <a href="http://ammediaco.com/">
+            <a href="http://ammediaco.com">
               <img
                 src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
                 alt="AMMC Consultants"
@@ -77,7 +77,7 @@
           </td>
           <td style="width: 45px; padding-right: 25px">
             <!-- NPA Polling logo -->
-            <a href="http://natpublicaffairs.com/">
+            <a href="http://natpublicaffairs.com">
               <img
                 src="https://ammc.vercel.app/logos/npap-logo-blue.png"
                 alt="NPA Polling"
@@ -87,7 +87,7 @@
           </td>
           <td style="width: 100px; height: auto">
             <!-- 17th Street Media logo -->
-            <a href="http://17thstreetmedia.com/">
+            <a href="http://17thstreetmedia.com">
               <img
                 src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
                 alt="17th Street Media"
