--- a/ammc-17th-signature.html
+++ b/ammc-17th-signature.html
@@ -28,7 +28,7 @@
         <tr>
           <td style="padding: 0 28px 0 3px; border-right: 1px solid #cedae3">
             <!-- AMMC logo -->
-            <a href="http://americanmadeco.com/">
+            <a href="http://americanmadeco.com">
               <img
                 src="https://ammc.vercel.app/logos/ammc-logo.png"
                 alt="American Made Media Company"
@@ -38,7 +38,7 @@
           </td>
           <td style="width: 250px; padding: 0 3px 0 29px">
             <!-- 17th Street Media logo -->
-            <a href="http://17thstreetmedia.com/">
+            <a href="http://17thstreetmedia.com">
               <img
               src="https://ammc.vercel.app/logos/17th-st-logo.png"
               alt="17th Street Media"
@@ -57,7 +57,7 @@
         <tr>
           <td style="width: 60px; padding: 0 40px 0 15px">
             <!-- NPA Strategies logo -->
-            <a href="http://npastrategies.com/">
+            <a href="http://npastrategies.com">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo-blue.png"
                 alt="NPA Strategies"
@@ -67,7 +67,7 @@
           </td>
           <td style="width: 60px; padding-right: 40px">
             <!-- AMMC Consultants logo -->
-            <a href="http://ammediaco.com/">
+            <a href="http://ammediaco.com">
               <img
               src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
               alt="AMMC Consultants"
@@ -77,7 +77,7 @@
           </td>
           <td style="width: 60px; padding-right: 40px">
             <!-- NPA Polling logo -->
-            <a href="http://natpublicaffairs.com/">
+            <a href="http://natpublicaffairs.com">
               <img
               src="https://ammc.vercel.app/logos/npap-logo-blue.png"
               alt="NPA Polling"
