--- a/ammc-npa-strat-signature.html
+++ b/ammc-npa-strat-signature.html
@@ -34,7 +34,7 @@
             "
           >
             <!-- AMMC logo -->
-            <a href="http://americanmadeco.com/">
+            <a href="http://americanmadeco.com">
               <img
                 src="https://ammc.vercel.app/logos/ammc-logo.png"
                 alt="American Made Media Company"
@@ -44,7 +44,7 @@
           </td>
           <td style="width: 136px; padding: 0 32px 0 57px">
             <!-- NPA Strategies logo -->
-            <a href="https://www.natpublicaffairs.com/">
+            <a href="https://www.natpublicaffairs.com">
               <img
                 src="https://ammc.vercel.app/logos/npas-logo.png"
                 alt="National Public Affairs Strategies"
@@ -63,7 +63,7 @@
         <tr>
           <td style="width: 55px; padding-right: 30px">
             <!-- AMMC Consulting logo -->
-            <a href="http://ammediaco.com/">
+            <a href="http://ammediaco.com">
               <img
                 src="https://ammc.vercel.app/logos/ammcc-logo-blue.png"
                 alt="American Made Media Consulting"
@@ -83,7 +83,7 @@
           </td>
           <td style="width: 55px; padding-right: 30px">
             <!-- NPA Polling logo -->
-            <a href="http://npastrategies.com/">
+            <a href="http://npastrategies.com">
               <img
                 src="https://ammc.vercel.app/logos/npap-logo-blue.png"
                 alt="NPA Polling"
@@ -93,7 +93,7 @@
           </td>
           <td style="width: 115px; height: auto">
             <!-- 17th Street Media logo -->
-            <a href="http://17thstreetmedia.com/">
+            <a href="http://17thstreetmedia.com">
               <img
                 src="https://ammc.vercel.app/logos/17th-st-logo-blue.png"
                 alt="17th Street Media"
